--- a/testev3.html
+++ b/testev3.html
@@ -65,11 +65,11 @@
     .button:hover {
       background: #c2185b;
     }
-    #user-info, #assessment, #results-container {
-      display: none;
-    }
-    #assessment {
-      display: block;
+    #user-info {
+  display: block;
+}
+#assessment, #results-container {
+  display: none;
     }
     .question-block {
       margin-bottom: 15px;
